--- a/Quiz.css
+++ b/Quiz.css
@@ -13,13 +13,13 @@
     }
 
     body {
-      color: #fff;
+      color: red;
       min-height: 100vh;
       padding: 2rem;
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
-      background-position: center;
+      background-position: left;
       transition: background-image 0.5s ease-in-out;
     }
 
